--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
       "jest --findRelatedTests"
     ]
   },
-  "author": "Your Name <you@example.com>",
+  "author": "CROTTY <Crottyjonathan@yahoo.com>",
   "dependencies": {
     "dotenv": "^17.2.2",
     "ffmpeg-static": "^5.2.0",
