--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
     "winston": "^3.9.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.38.0",
     "electron": "^38.1.2",
     "electron-builder": "^24.6.0",
     "eslint": "^9.37.0",
     "eslint-plugin-jest": "^29.0.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-security": "^3.0.1",
+    "globals": "^16.4.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "lint-staged": "^16.2.4",
