security: Move sensitive credentials to protected folder and update .gitignore
- Move client_secret JSON to credentials/ folder
- Move Virtual box credentials to credentials/ folder
- Add credentials/ folder to .gitignore
- Block all client_secret_*.json files from git
- Block .txt files (except README/package.txt)
- Add credentials/README.md explaining security measures
- Prevents accidental credential commits

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@
 /coverage/
 *.bak
 *.log
+
+# Sensitive credentials - NEVER commit these
+client_secret_*.json
+*.txt
+!README.txt
+!package.txtcredentials/
