chore: fix ESLint ES module loader in CI/CD workflows (2025-10-21)

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -52,7 +52,7 @@ jobs:
     - name: Install dependencies
       run: npm ci
     - name: Run ESLint
-      run: npm run lint
+      run: node --loader=esm ./node_modules/.bin/eslint .
 
   build:
     needs: [security, test, lint]
