--- a/package.json
+++ b/package.json
@@ -27,12 +27,11 @@
   },
   "author": "CROTTY <Crottyjonathan@yahoo.com>",
   "dependencies": {
+    "axios": "^1.12.2",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "ffmpeg-static": "^5.2.0",
-    "gif-encoder-2": "^1.0.5",
-    "lru-cache": "^11.2.2",
-    "winston": "^3.9.0"
+    "sharp": "^0.34.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.38.0",
