--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "devDependencies": {
     "@eslint/js": "^9.38.0",
     "electron": "^38.4.0",
-    "electron-builder": "^24.6.0",
+    "electron-builder": "^26.0.12",
     "eslint": "^9.38.0",
     "eslint-plugin-jest": "^29.0.1",
     "eslint-plugin-node": "^11.1.0",
@@ -65,18 +65,12 @@
       "entitlements": "entitlements.mac.plist"
     },
     "win": {
-      "target": [
-        "nsis"
-      ],
-      "sign": false
+      "target": ["nsis"],
+      "forceCodeSigning": false,
+      "icon": "ABS.ico"
     },
     "linux": {
-      "target": [
-        "AppImage"
-      ],
-      "desktop": {
-        "StartupWMClass": "ai-auto-bot"
-      }
+      "target": ["AppImage"]
     }
   }
 }
