chore(security): add SECURITY_CLEANUP, enforce gitleaks in CI, ignore restore-points

--- a/.github/workflows/secret-scan.yml
+++ b/.github/workflows/secret-scan.yml
@@ -1,4 +1,4 @@
-name: Secret Scan
+name: Secret Scan (gitleaks)
 
 on:
   push:
@@ -13,10 +13,18 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Install gitleaks
+        run: |
+          # Install gitleaks CLI
+          curl -sSfL https://raw.githubusercontent.com/zricethezav/gitleaks/main/install.sh | bash -s -- -b $HOME/.local/bin v8.2.0
+          export PATH="$HOME/.local/bin:$PATH"
+
       - name: Run gitleaks scan
-        uses: zricethezav/gitleaks-action@v8
-        with:
-          args: --redact --report-format=json --report-path=gitleaks-report.json
+        env:
+          GITLEAKS_PATH: ${{ runner.temp }}/gitleaks
+        run: |
+          # Run gitleaks and fail the job if leaks are detected
+          $HOME/.local/bin/gitleaks detect --source . --report-path gitleaks-report.json --redact || (echo "GITLEAKS: leaks found" && exit 1)
 
       - name: Upload gitleaks report
         if: always()
