fix: implement robust reset flow and OAuth validation improvements

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,31 @@
+# Example environment variables for local development
+# Copy this to .env and fill in your provider credentials. NEVER commit your real .env to git.
+
+# Encryption key (optional): hex-encoded 32 bytes. If not provided, a dev key will be generated in data/.encryption_key
+# ENCRYPTION_KEY=0123456789abcdef... (64 hex chars)
+
+# Google / YouTube
+GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=your-google-client-secret
+GOOGLE_OAUTH_CONFIG={"token_uri":"https://oauth2.googleapis.com/token"}
+
+# YouTube (alias of Google in some places)
+YOUTUBE_CLIENT_ID=your-youtube-client-id
+YOUTUBE_CLIENT_SECRET=your-youtube-client-secret
+
+# Twitter (if using OAuth 2.0 or OAuth 1.0a)
+TWITTER_CLIENT_ID=your-twitter-client-id
+TWITTER_CLIENT_SECRET=your-twitter-client-secret
+
+# TikTok / Instagram
+TIKTOK_CLIENT_ID=your-tiktok-client-id
+TIKTOK_CLIENT_SECRET=your-tiktok-client-secret
+INSTAGRAM_CLIENT_ID=your-instagram-client-id
+INSTAGRAM_CLIENT_SECRET=your-instagram-client-secret
+
+# OAuth redirect URI used during local development. Ensure this value matches the redirect URI configured
+# with each provider when registering your app. The default Express callback server listens on port 3000.
+REDIRECT_URI=http://localhost:3000/oauth/callback
 # Example .env for AI Auto Bot
 # Copy to .env and fill secrets before running in production.
 
