security: remove user data from git tracking and add audit report
CRITICAL FIX: User data files (tokens.json, settings.json, savedConfigs.json)
were accidentally tracked in git and could expose sensitive credentials.

Changes:
- Remove data/*.json from git tracking (git rm --cached)
- Update .gitignore to explicitly exclude data/* except .example files
- Add data/tokens.json.example and data/settings.json.example templates
- Add data/README.md with security documentation
- Create SECURITY_AUDIT_REPORT.md documenting findings
- Update secret scanner to allow .example and README.md in data/

Security improvements:
- Prevent accidental commit of OAuth tokens and API keys
- Add patterns for certificates (.pem, .p12, .key, .crt)
- Document proper security practices

All sensitive files now properly gitignored. Example files provided for reference.

--- a/.gitignore
+++ b/.gitignore
@@ -4,19 +4,26 @@
 /node_modules
 /dist
 /logs
-/data
 .env
 .DS_Store
 /coverage/
 *.bak
 *.log
 
+# User data and secrets - NEVER commit these
+/data/*
+!data/*.example
+!data/README.md
+
 # Prevent tracking of centralized restore points/backups
 /restore-points/
-# Sensitive credentials - NEVER commit these
+
+# Sensitive credentials
 client_secret_*.json
-*.txt
-!README.txt
-!package.txtcredentials/
+credentials/
+*.pem
+*.p12
+*.key
+*.crt
 
 ai-auto-bot-filter.git/
