--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -37,14 +37,15 @@ jobs:
       - name: Run tests
         run: npm test
 
-      - name: Build artifacts (unsigned)
+      - name: Build artifacts
         env:
-          # Provide signing env vars in repo secrets when you want signed builds
-          CSC_LINK: ${{ secrets.CSC_LINK }}
-          CSC_KEY_PASSWORD: ${{ secrets.CSC_KEY_PASSWORD }}
+          # Provide signing env vars in repo secrets when you want signed builds.
+          # Fallback to empty string prevents GitHub Actions warnings when secrets aren't set.
+          CSC_LINK: ${{ secrets.CSC_LINK || '' }}
+          CSC_KEY_PASSWORD: ${{ secrets.CSC_KEY_PASSWORD || '' }}
         run: |
           # Build platform-specific artifact. On macOS and Windows, signing will be attempted
-          # only if signing secrets are provided; otherwise builds are unsigned.
+          # only if CSC_LINK is not empty; otherwise builds are unsigned (no warnings).
           npm run dist -- --${{ matrix.target }} --x64
 
       - name: Upload artifacts
