fix: resolve GitHub Actions workflow failures
- Fix gitleaks installation path (use /usr/local/bin instead of $HOME/.local/bin)
- Fix ESLint command (use npm run lint instead of node --loader=esm)
- Update Node.js version to 20 for consistency in lint job

Resolves CI/CD Pipeline #15 and Secret Scan failures

--- a/.github/workflows/secret-scan.yml
+++ b/.github/workflows/secret-scan.yml
@@ -15,17 +15,13 @@ jobs:
 
       - name: Install gitleaks
         run: |
-          # Install gitleaks CLI
-          curl -sSfL https://raw.githubusercontent.com/zricethezav/gitleaks/main/install.sh | bash -s -- -b $HOME/.local/bin v8.2.0
-          export PATH="$HOME/.local/bin:$PATH"
-
+          # Install gitleaks CLI to /usr/local/bin (in PATH by default)
+          curl -sSfL https://raw.githubusercontent.com/zricethezav/gitleaks/main/install.sh | sudo bash -s -- -b /usr/local/bin v8.2.0
 
       - name: Run gitleaks scan (strict config)
-        env:
-          GITLEAKS_PATH: ${{ runner.temp }}/gitleaks
         run: |
           # Run gitleaks with repository-specific config and fail the job if leaks are detected
-          $HOME/.local/bin/gitleaks detect --source . --config-path .github/gitleaks-config.toml --report-path gitleaks-report.json --redact
+          gitleaks detect --source . --config-path .github/gitleaks-config.toml --report-path gitleaks-report.json --redact
 
       - name: Post findings as PR comment (if any)
         if: ${{ github.event_name == 'pull_request' }}
