--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -54,23 +54,5 @@ jobs:
       - name: Run ESLint
         run: npm run lint
 
-  build:
-    needs: [security, test, lint]
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: "18"
-      - name: Install dependencies
-        run: npm ci
-      - name: Build
-        run: npm run dist
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: dist-${{ matrix.os }}
-          path: dist/
+  # Build job removed from CI/CD - too slow and resource-intensive for every push
+  # Use build-release.yml workflow instead (triggered on tags/manual dispatch)
