--- a/.github/workflows/secret-scan.yml
+++ b/.github/workflows/secret-scan.yml
@@ -12,50 +12,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Install gitleaks
-        run: |
-          # Install gitleaks CLI to /usr/local/bin (in PATH by default)
-          curl -sSfL https://raw.githubusercontent.com/zricethezav/gitleaks/main/install.sh | sudo bash -s -- -b /usr/local/bin v8.2.0
-
-      - name: Run gitleaks scan (strict config)
-        run: |
-          # Run gitleaks with repository-specific config and fail the job if leaks are detected
-          gitleaks detect --source . --config-path .github/gitleaks-config.toml --report-path gitleaks-report.json --redact
-
-      - name: Post findings as PR comment (if any)
-        if: ${{ github.event_name == 'pull_request' }}
-        uses: actions/github-script@v6
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const fs = require('fs');
-            const path = 'gitleaks-report.json';
-            if (!fs.existsSync(path)) {
-              core.info('No gitleaks report found');
-              return;
-            }
-            const report = JSON.parse(fs.readFileSync(path, 'utf8'));
-            if (!Array.isArray(report) || report.length === 0) {
-              core.info('No leaks reported');
-              return;
-            }
-            // Build a concise comment
-            let body = '⚠️ gitleaks found potential secrets in this PR:\n\n';
-            report.slice(0,10).forEach((r,i)=>{
-              body += `- ${r.rule_id} (${r.description || 'match'}) at ${r.file}:${r.line}\n`;
-            });
-            body += '\nPlease remove secrets, rotate any exposed keys, and re-run the checks.';
-            await github.issues.createComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: context.payload.pull_request.number,
-              body,
-            });
+          fetch-depth: 0  # Fetch all history for gitleaks
 
-      - name: Upload gitleaks report
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: gitleaks-report
-          path: gitleaks-report.json
+      - name: Run gitleaks scan
+        uses: gitleaks/gitleaks-action@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITLEAKS_CONFIG: .github/gitleaks-config.toml
