fix: correct gitleaks config syntax and clean up package.json
- Fix gitleaks-config.toml: change [[allowlist]] to [allowlist] (single table, not array)
- Add .example files to allowlist paths
- Remove husky and lint-staged references from package.json scripts
- Remove snyk from security-check script (npm audit is sufficient)

Resolves gitleaks expected a map, got slice error

--- a/.github/gitleaks-config.toml
+++ b/.github/gitleaks-config.toml
@@ -19,7 +19,12 @@ description = "Private key material in files"
 regex = "-----BEGIN (RSA |DSA |EC |OPENSSH )?PRIVATE KEY-----"
 severity = "critical"
 
-[[allowlist]]
+[allowlist]
 # Allow README badges or public examples
 description = "Allow example keys and documentation snippets"
-paths = ["README.md", "docs/**"]
+paths = [
+  "README.md",
+  "docs/**",
+  "*.example.json",
+  "*.example"
+]
