fix: use regex patterns instead of glob in gitleaks config
- Change docs/** to docs/.* (regex pattern)
- Change *.example to .*\\.example (escaped regex)
- Gitleaks uses regex, not glob patterns

Resolves: bad repetition operator ** error

--- a/.github/gitleaks-config.toml
+++ b/.github/gitleaks-config.toml
@@ -24,7 +24,7 @@ severity = "critical"
 description = "Allow example keys and documentation snippets"
 paths = [
   "README.md",
-  "docs/**",
-  "*.example.json",
-  "*.example"
+  "docs/.*",
+  ".*\\.example\\.json",
+  ".*\\.example"
 ]
