--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "axios": "^1.12.2",
     "dotenv": "^17.2.2",
+    "electron-updater": "^6.6.2",
     "express": "^5.1.0",
     "ffmpeg-static": "^5.2.0",
     "sharp": "^0.34.4"
@@ -38,12 +39,34 @@
   },
   "build": {
     "appId": "com.j.ai-autobot",
+    "productName": "AI Auto Bot",
     "files": [
       "**/*",
-      "!node_modules/*/{CHANGELOG.md,README.md}"
+      "!node_modules/*/{CHANGELOG.md,README.md,LICENSE,*.d.ts}",
+      "!**/*.{map,md,txt}",
+      "!.env",
+      "!.env.example",
+      "!.git*",
+      "!.eslint*",
+      "!.prettier*",
+      "!.secretlint*",
+      "!*.config.{js,cjs}",
+      "!coverage/**",
+      "!tests/**",
+      "!docs/**",
+      "!restore-points/**",
+      "!.github/**",
+      "!.vscode/**",
+      "!data/*.json",
+      "!logs/**"
     ],
     "directories": {
       "output": "dist"
+    },
+    "publish": {
+      "provider": "github",
+      "owner": "101Toast101",
+      "repo": "ai-auto-bot"
     },
     "mac": {
       "target": [
@@ -58,12 +81,14 @@
         "nsis"
       ],
       "forceCodeSigning": false,
-      "icon": "ABS.ico"
+      "icon": "ABS.ico",
+      "publisherName": "CROTTY"
     },
     "linux": {
       "target": [
         "AppImage"
-      ]
+      ],
+      "category": "Utility"
     }
   }
 }
