--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lint:fix": "eslint . --fix",
     "security-check": "npm audit"
   },
-  "author": "CROTTY <Crottyjonathan@yahoo.com>",
+  "author": "CROTTY",
   "dependencies": {
     "axios": "^1.12.2",
     "dotenv": "^17.2.2",
